Use generic copyright footer

--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -38,9 +38,11 @@ html(lang='en')
       div.container
         block footer
           p Designed by 
-            a(href='http://www.doc.ic.ac.uk/~ph1310', title='Petr Hosek') Petr Hosek
+          p Copyright &copy; 2012 
+            a(href='http://www3.imperial.ac.uk/') Imperial College London
             , 
-            a(href='http://www3.imperial.ac.uk/', title='Imperial College London') Imperial College London
+            a(href='http://www3.imperial.ac.uk/computing/') Department of Computing
+            Research Students
     script(src='http://code.jquery.com/jquery-latest.js')
     script(src='/2013/js/bootstrap.min.js')
     script(src='/2013/js/app.js')
