--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
-block append subhead
+block subhead
   .mission
     p.lead
       | 2013 Imperial College Computing Student Workshop
