Uses logo in the nav bar

--- a/contents/css/app.css
+++ b/contents/css/app.css
@@ -37,6 +37,9 @@ body > .navbar .brand:hover {
   text-decoration: none;
   text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.4);
 }
+body > .navbar .brand img {
+  vertical-align: top;
+}
 
 /* Page header tweaks */
 section > .page-header,
